# snaze

./: README.md  author.md
assets/: level_horizontal_backdor.data
include/: level.h  player.h  simulation.h  snake.h
source/: CMakeLists.txt  level.cpp  main.cpp  player.cpp  simulation.cpp  snake.cpp
